# sample-config

./: Cargo.toml  README.md
.github/workflows/: rust.yml
sample-config-macros/: Cargo.toml
sample-config-macros/src/: attributes.rs  derive.rs  lib.rs
src/: implementations.rs  lib.rs
tests/: expected_config.yaml  features.rs  generation.rs
tests/expected/: config_generation.json5  tracing_config.json5  tracing_config.yaml  url_config.json5  url_config.yaml
