[workspace]
members = ["sample-config-macros"]
resolver = "2"

[package]
authors = ["Flix <felix.dommes@rwth-aachen.de>"]
categories = ["config", "value-formatting"]
description = "Generation of sample configs with documentation comments."
documentation = "https://docs.rs/sample-config"
edition = "2021"
homepage = "https://github.com/FlixCoder/sample-config"
keywords = ["config", "sample", "generate", "macro"]
license = "MIT"
name = "sample-config"
readme = "README.md"
repository = "https://github.com/FlixCoder/sample-config"
version = "0.1.0"

[features]
default = ["yaml"]
tracing = ["dep:tracing"]
url = ["dep:url"]
yaml = ["sample-config-macros/yaml"]

[dependencies]
sample-config-macros = {version = "0.1.0", path = "sample-config-macros"}
tracing = {version = "0.1.37", default-features = false, optional = true}
url = {version = "2.3.1", optional = true}

[dev-dependencies]
serde = {version = "1.0.147", features = ["derive"]}
serde_yaml = "0.9.14"
url = {version = "2.3.1", features = ["serde"]}
